@@ -1,5 +1,7 @@
 Unreleased Version 2.3.0-pre
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
+ * Fix: Make the preferences menu item on macOS open the preferences again.
+ * Feature: Show Preferences, About and Quit items both in the Mac-specific application menu and the menu where they go on every other system.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
